--- a/ch05.5-expose-headers/listing-5.6-expose-header/client-fetch.html
+++ b/ch05.5-expose-headers/listing-5.6-expose-header/client-fetch.html
@@ -21,9 +21,17 @@ async function blogPosts() {
     const response = await apiGetBlogPosts()
     if (response.status === 200) {
       // request was successful
+
+      // header
+      const headers = response.headers
+      const xPoweredBy = headers.get('x-powered-by')
+      console.log(xPoweredBy);
+
+      // body
       const bodyJsonPromise = response.json()
       const data = await bodyJsonPromise
-      renderBlogPosts(data)
+
+      renderBlogPosts(data, xPoweredBy)
     } else {
       throw new Error('not 200')
     }
@@ -31,9 +39,16 @@ async function blogPosts() {
     handleError(err)
   }
 
-  function renderBlogPosts(data) {
+  function renderBlogPosts(data, xPoweredBy) {
     const {container} = app
     container.innerHTML = ''
+
+    if (xPoweredBy) {
+      var xpbDiv = document.createElement('div');
+      xpbDiv.className = 'post';
+      xpbDiv.innerHTML = 'X-Powered-By: ' + xPoweredBy;
+      container.appendChild(xpbDiv);
+    }
 
     for (let postId in data) {
       let postText = data[postId].post
