--- a/ch05.5-expose-headers/listing-5.6-expose-header/client-fetch.html
+++ b/ch05.5-expose-headers/listing-5.6-expose-header/client-fetch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><body onload="appBootstrap();">
 <style>
-.post {margin-bottom: 20px;}
+.post, .x-powered-by {margin-bottom: 20px;}
 </style>
 <div id="output">content goes here</div>
 <script>
@@ -42,13 +42,16 @@ async function blogPosts() {
   function renderBlogPosts(data, xPoweredBy) {
     const {container} = app
     container.innerHTML = ''
-
+    
+	const xpbDiv = document.createElement('div');
+    xpbDiv.className = 'x-powered-by';
     if (xPoweredBy) {
-      var xpbDiv = document.createElement('div');
-      xpbDiv.className = 'post';
       xpbDiv.innerHTML = 'X-Powered-By: ' + xPoweredBy;
       container.appendChild(xpbDiv);
-    }
+    } else {
+      xpbDiv.innerHTML = 'X-Powered-By: undefined';
+	  container.appendChild(xpbDiv);
+	}
 
     for (let postId in data) {
       let postText = data[postId].post
